--- a/src/python3_course_for_devs/notebooks/string.ipynb
+++ b/src/python3_course_for_devs/notebooks/string.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 396,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
        "'this a str'"
       ]
      },
-     "execution_count": 347,
+     "execution_count": 396,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 397,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 398,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 399,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 400,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
        "''"
       ]
      },
-     "execution_count": 351,
+     "execution_count": 400,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 401,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
        "'1+1 = 2'"
       ]
      },
-     "execution_count": 352,
+     "execution_count": 401,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 402,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
        "'1+1 = 2'"
       ]
      },
-     "execution_count": 353,
+     "execution_count": 402,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 403,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 404,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
        "'1'"
       ]
      },
-     "execution_count": 355,
+     "execution_count": 404,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 405,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
        "'[1, 2, 3]'"
       ]
      },
-     "execution_count": 356,
+     "execution_count": 405,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 406,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
        "'{1, 2, 3}'"
       ]
      },
-     "execution_count": 357,
+     "execution_count": 406,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 407,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
        "\"{'a': 1, 'b': 2}\""
       ]
      },
-     "execution_count": 358,
+     "execution_count": 407,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 408,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
        "'(1, 2, 3)'"
       ]
      },
-     "execution_count": 359,
+     "execution_count": 408,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 409,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
        "'foo'"
       ]
      },
-     "execution_count": 360,
+     "execution_count": 409,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 361,
+   "execution_count": 410,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": 411,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +478,7 @@
        "'b'"
       ]
      },
-     "execution_count": 362,
+     "execution_count": 411,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 412,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
        "'r'"
       ]
      },
-     "execution_count": 363,
+     "execution_count": 412,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 413,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
        "'ba'"
       ]
      },
-     "execution_count": 364,
+     "execution_count": 413,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 414,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +545,7 @@
        "'br'"
       ]
      },
-     "execution_count": 365,
+     "execution_count": 414,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 415,
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +572,7 @@
        "1"
       ]
      },
-     "execution_count": 366,
+     "execution_count": 415,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 416,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
        "-1"
       ]
      },
-     "execution_count": 367,
+     "execution_count": 416,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 417,
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +626,7 @@
        "2"
       ]
      },
-     "execution_count": 368,
+     "execution_count": 417,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 418,
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +653,7 @@
        "'foobarbar'"
       ]
      },
-     "execution_count": 369,
+     "execution_count": 418,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 419,
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +680,7 @@
        "2"
       ]
      },
-     "execution_count": 370,
+     "execution_count": 419,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 420,
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +714,7 @@
        "'--------foo---------'"
       ]
      },
-     "execution_count": 371,
+     "execution_count": 420,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 421,
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +734,7 @@
        "'foo-----------------'"
       ]
      },
-     "execution_count": 372,
+     "execution_count": 421,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 422,
    "metadata": {},
    "outputs": [
     {
@@ -754,7 +754,7 @@
        "'-----------------foo'"
       ]
      },
-     "execution_count": 373,
+     "execution_count": 422,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 423,
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +774,7 @@
        "'00000000000000000bar'"
       ]
      },
-     "execution_count": 374,
+     "execution_count": 423,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 424,
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +801,7 @@
        "'b a r'"
       ]
      },
-     "execution_count": 375,
+     "execution_count": 424,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -812,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 425,
    "metadata": {},
    "outputs": [
     {
@@ -821,7 +821,7 @@
        "'b a r '"
       ]
      },
-     "execution_count": 376,
+     "execution_count": 425,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 426,
    "metadata": {},
    "outputs": [
     {
@@ -841,7 +841,7 @@
        "' b a r'"
       ]
      },
-     "execution_count": 377,
+     "execution_count": 426,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 427,
    "metadata": {},
    "outputs": [
     {
@@ -868,7 +868,7 @@
        "'BAR'"
       ]
      },
-     "execution_count": 378,
+     "execution_count": 427,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 428,
    "metadata": {},
    "outputs": [
     {
@@ -888,7 +888,7 @@
        "'bar'"
       ]
      },
-     "execution_count": 379,
+     "execution_count": 428,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -899,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 429,
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +908,7 @@
        "'Bar foo'"
       ]
      },
-     "execution_count": 380,
+     "execution_count": 429,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 430,
    "metadata": {},
    "outputs": [
     {
@@ -928,7 +928,7 @@
        "'Bar Foo'"
       ]
      },
-     "execution_count": 381,
+     "execution_count": 430,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -939,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 431,
    "metadata": {},
    "outputs": [
     {
@@ -948,7 +948,7 @@
        "'bAR fOO'"
       ]
      },
-     "execution_count": 382,
+     "execution_count": 431,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -966,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": 432,
    "metadata": {},
    "outputs": [
     {
@@ -975,7 +975,7 @@
        "'fxx'"
       ]
      },
-     "execution_count": 383,
+     "execution_count": 432,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -986,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": 433,
    "metadata": {},
    "outputs": [
     {
@@ -995,7 +995,7 @@
        "'fo'"
       ]
      },
-     "execution_count": 384,
+     "execution_count": 433,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1015,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 434,
    "metadata": {},
    "outputs": [
     {
@@ -1024,7 +1024,7 @@
        "['b', 'r']"
       ]
      },
-     "execution_count": 385,
+     "execution_count": 434,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1035,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 386,
+   "execution_count": 435,
    "metadata": {},
    "outputs": [
     {
@@ -1044,7 +1044,7 @@
        "['b', 'a', 'r', '', 'foo']"
       ]
      },
-     "execution_count": 386,
+     "execution_count": 435,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1069,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": 436,
    "metadata": {},
    "outputs": [
     {
@@ -1078,7 +1078,7 @@
        "'bar'"
       ]
      },
-     "execution_count": 387,
+     "execution_count": 436,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1096,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": 437,
    "metadata": {},
    "outputs": [
     {
@@ -1105,7 +1105,7 @@
        "True"
       ]
      },
-     "execution_count": 388,
+     "execution_count": 437,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1116,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
+   "execution_count": 438,
    "metadata": {},
    "outputs": [
     {
@@ -1125,7 +1125,7 @@
        "True"
       ]
      },
-     "execution_count": 389,
+     "execution_count": 438,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1136,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 390,
+   "execution_count": 439,
    "metadata": {},
    "outputs": [
     {
@@ -1145,7 +1145,7 @@
        "True"
       ]
      },
-     "execution_count": 390,
+     "execution_count": 439,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1156,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": 440,
    "metadata": {},
    "outputs": [
     {
@@ -1165,7 +1165,7 @@
        "True"
       ]
      },
-     "execution_count": 391,
+     "execution_count": 440,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1178,7 +1178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 441,
    "metadata": {},
    "outputs": [
     {
@@ -1187,7 +1187,7 @@
        "True"
       ]
      },
-     "execution_count": 392,
+     "execution_count": 441,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1199,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 442,
    "metadata": {},
    "outputs": [
     {
@@ -1208,7 +1208,7 @@
        "True"
       ]
      },
-     "execution_count": 394,
+     "execution_count": 442,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1220,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 395,
+   "execution_count": 443,
    "metadata": {},
    "outputs": [
     {
@@ -1229,7 +1229,7 @@
        "True"
       ]
      },
-     "execution_count": 395,
+     "execution_count": 443,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1241,9 +1241,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 444,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 444,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 不为空且仅空格\n",
     "\" \".isspace()"
