--- a/src/python3_course_for_devs/notebooks/number.ipynb
+++ b/src/python3_course_for_devs/notebooks/number.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
        "0"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 225,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
        "1"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 226,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
        "32"
       ]
      },
-     "execution_count": 190,
+     "execution_count": 227,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
        "-32"
       ]
      },
-     "execution_count": 191,
+     "execution_count": 228,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
        "20"
       ]
      },
-     "execution_count": 192,
+     "execution_count": 229,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
        "-42"
       ]
      },
-     "execution_count": 193,
+     "execution_count": 230,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
        "42"
       ]
      },
-     "execution_count": 194,
+     "execution_count": 231,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
        "0.0"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 232,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
        "1.0"
       ]
      },
-     "execution_count": 196,
+     "execution_count": 233,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
        "2.0"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 234,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
        "20.0"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 235,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
        "0.000123"
       ]
      },
-     "execution_count": 199,
+     "execution_count": 236,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,7 @@
        "0j"
       ]
      },
-     "execution_count": 200,
+     "execution_count": 237,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
        "(1+0j)"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 238,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
        "(-1.1-1.2j)"
       ]
      },
-     "execution_count": 202,
+     "execution_count": 239,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +514,7 @@
        "-1j"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 240,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
        "(-3+0j)"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 241,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +588,7 @@
        "15.0"
       ]
      },
-     "execution_count": 205,
+     "execution_count": 242,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
        "5.0"
       ]
      },
-     "execution_count": 206,
+     "execution_count": 243,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +646,7 @@
        "4"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 244,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +666,7 @@
        "4.0"
       ]
      },
-     "execution_count": 208,
+     "execution_count": 245,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +693,7 @@
        "2"
       ]
      },
-     "execution_count": 209,
+     "execution_count": 246,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [
     {
@@ -720,7 +720,7 @@
        "9"
       ]
      },
-     "execution_count": 210,
+     "execution_count": 247,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -740,12 +740,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "绝对值\n"
+    "#### 绝对值\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [
     {
@@ -754,7 +754,7 @@
        "1"
       ]
      },
-     "execution_count": 211,
+     "execution_count": 248,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -764,15 +764,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "浮点数形式绝对值\n"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [
     {
@@ -781,12 +774,13 @@
        "10.0"
       ]
      },
-     "execution_count": 212,
+     "execution_count": 249,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# 浮点数形式绝对值\n",
     "import math\n",
     "\n",
     "math.fabs(-10)"
@@ -796,12 +790,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "上取整\n"
+    "#### 取整\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [
     {
@@ -810,25 +804,18 @@
        "4"
       ]
      },
-     "execution_count": 213,
+     "execution_count": 250,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "math.ceil(3.3)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "下取整\n"
+    "math.ceil(3.3)  # 上取整"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [
     {
@@ -837,25 +824,18 @@
        "4"
       ]
      },
-     "execution_count": 214,
+     "execution_count": 251,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "math.floor(4.9)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "四舍五入\n"
+    "math.floor(4.9)  # 下取整"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [
     {
@@ -864,26 +844,26 @@
        "3.556"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 252,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 保留 3 位小数\n",
-    "round(3.55555, 3)"
+    "# 四舍五入\n",
+    "round(3.55555, 3)  # 保留 3 位小数"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "幂运算\n"
+    "#### 幂运算\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +872,7 @@
        "8"
       ]
      },
-     "execution_count": 216,
+     "execution_count": 253,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -913,12 +893,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "排序并返回一个新的已排序对象\n"
+    "#### 排序并返回一个新的已排序对象\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [
     {
@@ -927,7 +907,7 @@
        "[9, 8, 5, 2, 1]"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 254,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -940,12 +920,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "对原对象进行排序\n"
+    "#### 对原对象进行排序\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [
     {
@@ -954,7 +934,7 @@
        "[9, 8, 5, 2, 1]"
       ]
      },
-     "execution_count": 218,
+     "execution_count": 255,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -976,21 +956,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "从一个序列随机取值\n"
+    "#### 从一个序列随机取值\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3"
+       "4"
       ]
      },
-     "execution_count": 219,
+     "execution_count": 256,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1005,21 +985,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "从指定范围内随机抽取，支持设定梯度\n"
+    "#### 从指定范围内随机抽取，支持设定梯度\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3"
+       "1"
       ]
      },
-     "execution_count": 220,
+     "execution_count": 257,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1033,21 +1013,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "随机数生成\n"
+    "#### 随机数生成\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6476681711616211"
+       "0.8881197670725718"
       ]
      },
-     "execution_count": 221,
+     "execution_count": 258,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1059,16 +1039,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "8.348556141145913"
+       "7.449979849454262"
       ]
      },
-     "execution_count": 222,
+     "execution_count": 259,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1082,21 +1062,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "随机排序\n"
+    "#### 随机排序\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[8, 5, 1, 3]"
+       "[1, 3, 8, 5]"
       ]
      },
-     "execution_count": 223,
+     "execution_count": 260,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1117,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [
     {
@@ -1126,7 +1106,7 @@
        "(-0.3000000000000007, -10.0)"
       ]
      },
-     "execution_count": 224,
+     "execution_count": 261,
      "metadata": {},
      "output_type": "execute_result"
     }
