--- a/src/python3_course_for_devs/notebooks/number.ipynb
+++ b/src/python3_course_for_devs/notebooks/number.ipynb
@@ -28,6 +28,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**使用字面值形式**\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 225,
    "metadata": {},
@@ -44,13 +51,25 @@
     }
    ],
    "source": [
-    "# 使用字面值形式\n",
     "# 正整数\n",
     "1\n",
     "# 负整数\n",
-    "-1\n",
-    "\n",
-    "# 使用 int 方法\n",
+    "-1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**使用 int 方法**\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 创建一个默认值为 0 的整数\n",
     "int()"
    ]
@@ -59,11 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 整型转换\n",
-    "\n",
-    "整数的类型转换用的还是 `int` 方法。\n",
-    "\n",
-    "> 方法 `int` 通过调用对象内部的魔术方法 `__int__` 完成整型转换。所有定义了 `__int__` 魔术方法的对象都可以通过 `int` 方法创建数字。\n",
+    "> 方法 `int` 通过调用对象内部的魔术方法 `__int__` 来创建整数对象。所有定义了 `__int__` 方法的对象都可以通过 `int` 方法创建整数。\n",
     "\n",
     "> [什么是魔术方法？]('./magic_method.ipynb')\n"
    ]
@@ -72,7 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- 布尔型转整型\n",
+    "- 由布尔型创建\n",
     "\n",
     "> Python 中布尔型是 `int` 类型的子类型，详细解释在 [布尔型]('./bool.ipynb')。\n"
    ]
@@ -101,7 +116,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- 浮点型转整型\n",
+    "- 由浮点型创建\n",
     "\n",
     "> 向 `0` 靠近，保留整数。\n"
    ]
@@ -150,7 +165,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- 实现了 `__int__` 方法的自定义类对象\n"
+    "- 由实现了 `__int__` 方法的自定义类创建\n"
    ]
   },
   {
@@ -187,11 +202,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- 整数字面值字符串\n",
+    "- 由整数字面值字符串创建\n",
     "\n",
     "  可以带正负号，首尾可以有空格。\n",
     "\n",
-    "> `int` 方法支持 `base` 参数（范围为 2-36），指定待转换值的进制，当 `base` 为 `0` 时，`int` 会根据数字前缀确定解析进制。\n"
+    "> `int` 方法支持 `base` 参数（范围为 2-36），指定参数的进制，当 `base` 为 `0` 时，`int` 会根据数字前缀确定解析进制。\n"
    ]
   },
   {
