--- a/src/python3_course_for_devs/notebooks/list.ipynb
+++ b/src/python3_course_for_devs/notebooks/list.ipynb
@@ -6,16 +6,14 @@
    "source": [
     "# 列表\n",
     "\n",
-    "列表即是`序列类型`也是`可变类型`，（`可变类型`和`序列类型`的概念在 [数据类型]('./types.ipynb') 有讲）\n",
-    "\n",
-    "回想一下 `序列类型` 的通用操作有哪些？\n"
+    "列表是 [序列类型]('./types.ipynb')。\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 创建一个列表\n"
+    "## 列表创建\n"
    ]
   },
   {
@@ -26,8 +24,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "使用字面值形式\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -36,14 +41,139 @@
        "['bar', 6, True, 3.4, None, {'a': 'b'}]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 列表字面值\n",
     "[\"bar\", 6, True, 3.4, None, {\"a\": \"b\"}]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "使用 `list` 方法\n",
+    "\n",
+    "默认创建一个空列表。\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 列表转换\n",
+    "\n",
+    "列表的类型转换用的还是 `list` 方法。\n",
+    "\n",
+    "`list`方法可以根据 [可迭代对象]('./types.ipynb') 创建列表。\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 字符串转列表\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['f', 'o', 'o']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(\"foo\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 元组转列表\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list((1, 2, 3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 集合转列表\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list({1, 2, 3})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 字典转列表\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': 1, 'b': 2}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list({\"a\": 1, \"b\": 2})"
    ]
   },
   {
@@ -55,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -173,8 +303,7 @@
      "text": [
       "insert\n",
       "['bar', 6, True, 3.4, None, {'a': 'b'}, 3.4, None, {'a': 'b'}, 'append', 'extend1', 'extend2']\n",
-      "['bar', 6, True, 3.4, None, {'a': 'b'}, 3.4, None, {'a': 'b'}, 'append', 'extend1']\n",
-      "['bar', 6, True, 3.4, None, {'a': 'b'}, 3.4, None, {'a': 'b'}, 'extend1']\n",
+      "['bar', 6, True, 3.4, None, {'a': 'b'}, 3.4, None, {'a': 'b'}, 'extend1', 'extend2']\n",
       "[]\n"
      ]
     }
@@ -208,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +372,7 @@
        "'new bar'"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,14 +392,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['new bar', 'insert', 6, True, 3.4, None, {'a': 'b'}, 3.4, None, {'a': 'b'}, 'append', 'extend1', 'extend2']\n",
+      "['extend2', 'extend1', 'append', {'a': 'b'}, None, 3.4, {'a': 'b'}, None, 3.4, True, 6, 'insert', 'new bar']\n",
       "[-1, False, 1, 2]\n",
       "[-1, False, 1, 2, 3]\n"
      ]
@@ -299,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
