--- a/src/python3_course_for_devs/notebooks/number.ipynb
+++ b/src/python3_course_for_devs/notebooks/number.ipynb
@@ -272,6 +272,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**使用字面值形式**\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 232,
    "metadata": {},
@@ -288,13 +295,25 @@
     }
    ],
    "source": [
-    "# 使用字面值形式\n",
     "# 小数\n",
     "1.1\n",
     "# 科学计数法表示\n",
-    "2.5e2\n",
-    "\n",
-    "# 使用 float 方法\n",
+    "2.5e2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**使用 `float` 方法**\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 创建一个默认值为 0.0 的小数\n",
     "float()"
    ]
@@ -303,14 +322,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 浮点型转换\n"
+    "> 方法 `float` 通过调用对象内部的魔术方法 `__float__` 来创建浮点数对象。所有定义了 `__float__` 方法的对象都可以通过 `float` 方法创建小数。\n",
+    "\n",
+    "> [什么是魔术方法？]('./magic_method.ipynb')\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- 布尔型转浮点型\n",
+    "- 由布尔型创建\n",
     "\n",
     "> Python 中布尔型是 int 类型的子类型，详细解释在 [布尔型]('./bool.ipynb')。\n"
    ]
@@ -339,7 +360,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- 整型转浮点型\n"
+    "- 由整型创建\n"
    ]
   },
   {
@@ -366,11 +387,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- 实现了 `__float__` 方法的自定义类对象\n",
-    "\n",
-    "> 方法 `float` 调用对象内部的魔术方法 `__float__` 完成浮点数转换。\n",
-    "\n",
-    "> [什么是魔术方法？]('./magic_method.ipynb')\n"
+    "- 由实现了 `__float__` 方法的自定义类创建\n"
    ]
   },
   {
@@ -401,6 +418,13 @@
     "\n",
     "my_num = MyFloatClass(20.0)\n",
     "float(my_num)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 由数字字面值字符串创建\n"
    ]
   },
   {
@@ -445,6 +469,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**使用字面值形式**\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 237,
    "metadata": {},
@@ -461,10 +492,22 @@
     }
    ],
    "source": [
-    "# 使用字面值形式\n",
-    "1 + 2j\n",
-    "\n",
-    "# 使用 complex 方法\n",
+    "1 + 2j"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**使用 complex 方法**\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 创建一个默认值为 0j 的复数\n",
     "complex()"
    ]
@@ -542,16 +585,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 复数转换\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- 整数字面值字符串\n",
+    "由整数字面值字符串创建\n",
     "\n",
-    "  可以带正负号，首尾也可以有空格\n",
+    "可以带正负号，首尾也可以有空格\n",
     "\n",
     "> `complex` 方法如果只传一个参数，可以是数字或者字符串，但传两个参数，那么两个参数必须都是数字。\n"
    ]
