--- a/src/python3_course_for_devs/notebooks/number.ipynb
+++ b/src/python3_course_for_devs/notebooks/number.ipynb
@@ -61,7 +61,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**使用 int 方法**\n"
+    "**使用 `int` 方法**\n"
    ]
   },
   {
@@ -499,7 +499,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**使用 complex 方法**\n"
+    "**使用 `complex` 方法**\n"
    ]
   },
   {
