--- a/src/python3_course_for_devs/notebooks/string.ipynb
+++ b/src/python3_course_for_devs/notebooks/string.ipynb
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "使用字面值形式\n"
+    "**使用字面值形式**\n"
    ]
   },
   {
@@ -119,7 +119,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "使用 `str` 方法\n",
+    "**使用 `str` 方法**\n",
     "\n",
     "默认创建一个空字符串。\n"
    ]
