--- a/src/python3_course_for_devs/notebooks/number.ipynb
+++ b/src/python3_course_for_devs/notebooks/number.ipynb
@@ -78,7 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> 方法 `int` 通过调用对象内部的魔术方法 `__int__` 来创建整数对象。所有定义了 `__int__` 方法的对象都可以通过 `int` 方法创建整数。\n",
+    "> 方法 `int` 通过调用对象内部的魔术方法 `__int__` 来创建整数对象。\n",
     "\n",
     "> [什么是魔术方法？]('./magic_method.ipynb')\n"
    ]
@@ -322,7 +322,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> 方法 `float` 通过调用对象内部的魔术方法 `__float__` 来创建浮点数对象。所有定义了 `__float__` 方法的对象都可以通过 `float` 方法创建小数。\n",
+    "> 方法 `float` 通过调用对象内部的魔术方法 `__float__` 来创建浮点数对象。\n",
     "\n",
     "> [什么是魔术方法？]('./magic_method.ipynb')\n"
    ]
