--- a/src/python3_course_for_devs/notebooks/string.ipynb
+++ b/src/python3_course_for_devs/notebooks/string.ipynb
@@ -119,9 +119,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**使用 `str` 方法**\n",
-    "\n",
-    "默认创建一个空字符串。\n"
+    "**使用 `str` 方法**\n"
    ]
   },
   {
@@ -141,7 +139,126 @@
     }
    ],
    "source": [
+    "# 默认创建一个空字符串。\n",
     "str()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> 方法 `str` 通过调用对象内部的魔术方法 `__str__` 或 `__repr__` 来创建字符串。\n",
+    "\n",
+    "> [什么是魔术方法？]('./magic_method.ipynb')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 由数字创建\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "str(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 由列表创建\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "str([1, 2, 3])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 由集合创建\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "str({1, 2, 3})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 由字典创建\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "str({\"a\": 1, \"b\": 2})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 由元组创建\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "str((1, 2, 3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 由实现了 `__str__` 方法的自定义类创建\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MyStrClass:\n",
+    "    def __init__(self, value):\n",
+    "        self.value = value\n",
+    "\n",
+    "    # 注意：__str__ 返回的必须是 str 型\n",
+    "    def __str__(self) -> str:\n",
+    "        return self.value\n",
+    "\n",
+    "    def __repr__(self) -> str:\n",
+    "        return self.value\n",
+    "\n",
+    "\n",
+    "my_str = MyStrClass(\"foo\")\n",
+    "str(my_str)"
    ]
   },
   {
@@ -236,194 +353,6 @@
    ],
    "source": [
     "print(r\"C:\\network\\tiktok\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 字符串转换\n",
-    "\n",
-    "字符串的类型转换用的还是 `str` 方法。\n",
-    "\n",
-    "> 方法 `str` 通过调用对象内部的魔术方法 `__str__` 或 `__repr__` 完成字符串转换。所有定义了 `__str__` 或 `__repr__` 魔术方法的对象都可以通过 `str` 方法创建字符串。\n",
-    "\n",
-    "> [什么是魔术方法？]('./magic_method.ipynb')\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- 数字转字符串\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 404,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'1'"
-      ]
-     },
-     "execution_count": 404,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "str(1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- 列表转字符串\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 405,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'[1, 2, 3]'"
-      ]
-     },
-     "execution_count": 405,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "str([1, 2, 3])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- 集合转字符串\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 406,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'{1, 2, 3}'"
-      ]
-     },
-     "execution_count": 406,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "str({1, 2, 3})"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- 字典转字符串\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 407,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"{'a': 1, 'b': 2}\""
-      ]
-     },
-     "execution_count": 407,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "str({\"a\": 1, \"b\": 2})"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- 元组转字符串\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 408,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'(1, 2, 3)'"
-      ]
-     },
-     "execution_count": 408,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "str((1, 2, 3))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- 实现了 `__str__` 方法的自定义类对象\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 409,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'foo'"
-      ]
-     },
-     "execution_count": 409,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "class MyStrClass:\n",
-    "    def __init__(self, value):\n",
-    "        self.value = value\n",
-    "\n",
-    "    # 注意：__str__ 返回的必须是 str 型\n",
-    "    def __str__(self) -> str:\n",
-    "        return self.value\n",
-    "\n",
-    "    def __repr__(self) -> str:\n",
-    "        return self.value\n",
-    "\n",
-    "\n",
-    "my_str = MyStrClass(\"foo\")\n",
-    "str(my_str)"
    ]
   },
   {
